[package]
name = "pyvector"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyvector"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "experimental-async"] }
tokio = { version = "1.37.0", features = ["full"] }
async-trait = "0.1.80"
derivative = "2.2.0"
inventory = "0.3.15"
serde = "1.0.200"
serde_with = "3.8.1"
toml = {version = "0.8.12", default-features = false}
typetag = "0.2.16"
vector = { git = "https://github.com/vectordotdev/vector.git", tag = "v0.38.0", default-features = false, features = [

    "transforms-dedupe",
    "transforms-filter",
    "transforms-pipelines",
    "transforms-reduce",
    "transforms-remap",
    "transforms-route",
    "transforms-sample",
    "transforms-throttle",

    "sinks-amqp",
    "sinks-aws_kinesis_firehose",
    "sinks-aws_kinesis_streams",
    "sinks-aws_s3",
    "sinks-aws_sqs",
    "sinks-aws_sns",
    "sinks-azure_blob",
    "sinks-elasticsearch",
    "sinks-file",
    "sinks-gcp",
    "sinks-http",
    "sinks-influxdb",
    "sinks-mqtt",
    "sinks-redis",
    "sinks-socket",
    "sinks-splunk_hec",
    "sinks-webhdfs",
] }
vector-lib = { git = "https://github.com/vectordotdev/vector.git", tag = "v0.38.0", default-features = false}
tokio-stream = { version = "0.1.15", default-features = false }
bytes = "1.6.0"
openssl-probe = "0.1.5"
tracing = { version = "0.1.40", features = ["max_level_info", "release_max_level_info"] }
once_cell = "1.19.0"

[package.metadata.cargo-machete]
ignored = ["inventory", "serde", "toml"]

[profile.release]
lto = "thin"

[profile.ci]
inherits = "release"
incremental = false
debug = "line-tables-only"
opt-level = 3
lto = "thin"
codegen-units = 1
