[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
derivative = "2.2.0"
inventory = "0.3.15"
serde = "1.0.200"
serde_with = "3.8.1"
toml = "0.8.12"
typetag = "0.2.16"
vrl = "0.15.0"
serde_json = "1.0.116"
vector = { git = "https://github.com/vectordotdev/vector.git", tag = "v0.38.0", default-features = false, features = [
    "unix",
    "transforms",
    "sinks"
] }
vector-lib = { git = "https://github.com/vectordotdev/vector.git", tag = "v0.38.0", default-features = false}
tokio = "1.37.0"
